# crest-knowledge-assistant

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data/CrestApi/: .bumpversion.cfg  .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ATHENA_INSTRUCTIONS.md  CMakeLists.txt  CRESTAPI_USAGE.md  ChangeLog  Dockerfile  README.md  TDAQ_INSTRUCTIONS.md
data/CrestApi/CrestApi/: ChannelSetDto.h  CrestApi.h  CrestApiBase.h  CrestApiExt.h  CrestApiFs.h  CrestAuth.h  CrestBaseResponse.h  CrestCondException.h  CrestDetail.h  CrestException.h  CrestLogger.h  CrestRequest.h  GenericMap.h  GlobalTagDto.h  GlobalTagMapDto.h  GlobalTagMapSetDto.h  GlobalTagSetDto.h  IovDto.h  IovSetDto.h  JwtUtils.h  PayloadDto.h  PayloadSetDto.h  PayloadSpecDto.h  PayloadTagInfoDto.h  PayloadTagInfoSetDto.h  RespPage.h  RunLumiDto.h  RunLumiSetDto.h  StoreDto.h  StoreSetDto.h  StringUtils.h  TagDto.h  TagInfoDto.h  TagMetaDto.h  TagMetaSetDto.h  TagSetDto.h  version.h.in
data/CrestApi/acts/: CMakeLists.txt  CrestFileResolver.cxx  CrestFileResolver.h
data/CrestApi/cmake/: CrestApiConfig.cmake.in
data/CrestApi/examples/: CMakeLists.txt  crest_condcontainer_example.cxx  crest_example_fs.cxx  crest_example_server.cxx  crest_example_server_getdata.cxx  crest_example_string_utils.cxx  crest_functions_example.cxx
data/CrestApi/scripts/: README_VERSION_CHECK.md  check_current_version.sh  check_version.sh  crest-proxy-setup.ch  crest-proxy-unset.ch  crest_monitoring_summary.sh
data/CrestApi/src/: ChannelSetDto.cxx  CrestApi.cxx  CrestApiBase.cxx  CrestApiFs.cxx  CrestAuth.cxx  CrestBaseResponse.cxx  CrestLogger.cxx  CrestRequest.cxx  GenericMap.cxx  GlobalTagDto.cxx  GlobalTagMapDto.cxx  GlobalTagMapSetDto.cxx  GlobalTagSetDto.cxx  IovDto.cxx  IovSetDto.cxx  JwtUtils.cxx  PayloadDto.cxx  PayloadSetDto.cxx  PayloadSpecDto.cxx  PayloadTagInfoDto.cxx  PayloadTagInfoSetDto.cxx  RespPage.cxx  RunLumiDto.cxx  RunLumiSetDto.cxx  StoreDto.cxx  StoreSetDto.cxx  StringUtils.cxx  TagDto.cxx  TagInfoDto.cxx  TagMetaDto.cxx  TagMetaSetDto.cxx  TagSetDto.cxx
data/CrestApi/test/: CMakeLists.txt  ChannelSetDto_test.cxx  CrestApi_test.cxx  CrestFileResolver_test.cxx  GlobalTagDto_test.cxx  GlobalTagMapDto_test.cxx  IovDto_test.cxx  PayloadDto_test.cxx  PayloadSpecDto_test.cxx  PayloadTagInfoDto_test.cxx  RespPage_test.cxx  RunLumiDto_test.cxx  StoreDto_test.cxx  StringUtils_test.cxx  TagDto_test.cxx  TagInfoDto_test.cxx  TagMetaDto_test.cxx  json_parse.cxx  test-json.cxx  test_utils.h
data/CrestApi/tools/: CMakeLists.txt  CrestContainer.cxx  CrestContainer.h
data/CrestApi/tools/cmake/: CrestContainerConfig.cmake.in
docs/: architecture.md
src/crest_knowledge_assistant/: indexing.py
